# autonomous-data-quality-agent

./: .geminiignore  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Considerations.md  LICENSE  README.md  RESEARCH.md  RESEARCH_0.md  RESEARCH_1.md  SECURITY.md  TODOS.md  index.html  mkdocs.yml  objects.inv  pyproject-Win-ARM64.toml  pyproject.toml
.ai-coding-assistant/: GEMINI.md  code-style.md  instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CD-Docs.yml  CI-Pipeline.yml  Release-Backend.yml  Release-Linux.yml  Release-MacOS.yml  Release-Windows.yml  Release-Windows_wixtool.yml  Release.yml
PyAirByte/: index.html
adqa-tui/: Cargo.toml
adqa-tui/src/: app.rs  cli_main.rs  main.rs  ui.rs
api/config/: index.html
api/core/: index.html
api/detection/: index.html
api/profiling/: index.html
detection/: index.html
distribution/gnu-full/: minify_env_unix.sh  minify_env_win.sh
distribution/msi/: adqa-installer.wxs
distribution/unix/: minify_env_unix.sh
distribution/win/: LICENSE.rtf  adqa-installer.wxs  minify_env_win.sh
docs/: PyAirByte.md  agents.md  core.md  data_ingress.md  detection.md  execution.md  index.md  ingress.md  llm.md  mkdocs.yml  profiling.md  scoring.md  trace.md
docs/api/: config.md  core.md  detection.md  profiling.md
docs/todo/: Considerations.md  ml_reproducibility_policy.md  phase3_mcp_descriptions.md
execution/: index.html
ingress/: index.html
notice/: NOTICE.md
profiling/: index.html
samples/: sample_data.csv  sample_data.db  sample_data.json  sample_data.parquet  sample_data.xlsx
scoring/: index.html
search/: search_index.json
src/adqa/: __init__.py  api.py  cli.py  result.py  version.py
src/adqa/config/: __init__.py  errors.py  model.py
src/adqa/core/: api.py  result.py
src/adqa/data_ingress/: airbyte.py  config.py  configs.py  datasource.py  factory.py  reader.py  types.py
src/adqa/data_ingress/readers/: airbyte.py  csv.py  data_warehouses.py  database.py  dataframe.py  excel.py  json.py  nosql.py  parquet.py  remote_file.py  s3.py
src/adqa/detection/: __init__.py  base.py  context.py  engine.py  registry.py  registry_setup.py  results.py
src/adqa/detection/ml_detectors/: __init__.py  bias.py  isolation_forest.py  pii.py
src/adqa/detection/rule_detectors/: __init__.py  constant.py  correlation.py  drift.py  duplicate.py  imbalance.py  missing.py  outlier.py  pattern.py  quasi_id.py  range.py  rare_category.py  semantic_boundary.py  skewness.py  type_mismatch.py  zero_value.py
src/adqa/execution/: __init__.py  approval.py  engine.py  executor.py  models.py  policy.py
src/adqa/profiling/: cache.py  engine.py
src/adqa/profiling/behavioral/: behavioral_profiler.py  categorical_behavior.py  numeric_behavior.py
src/adqa/profiling/ml/: anomaly_amplifier.py  ml_profiler.py  semantic_classifier.py
src/adqa/profiling/models/: column_profile.py  correlation_profile.py  dataset_profile.py  metrics.py  ml_profile.py  profiling_result.py  risk_signal.py
src/adqa/profiling/relational/: correlation_profiler.py
src/adqa/profiling/signals/: risk_signal_builder.py
src/adqa/profiling/structural/: column_profiler.py  dataset_profiler.py  logical_type_inference.py  summary.py
src/adqa/profiling/utils/: hashing.py  rounding.py
src/adqa/scoring/: __init__.py  decision.py  engine.py  models.py  normalizer.py  thresholds.py
src/adqa/scoring/aggregation/: aggregator.py
src/adqa/scoring/scorers/: base.py  rule_scorer.py
src/adqa/trace/: README.md  __init__.py  context.py  emitter.py  enums.py  events.py  llm.py  noop.py  reasoning.py
src/adqa/trace/audit/: __init__.py  summarizer.py  templates.py
src/adqa/trace/hooks/: __init__.py  context.py  decorators.py  execution.py  lineage_context.py  serialize.py
src/adqa/trace/lineage/: __init__.py  adapter.py  context.py  context_bridge.py  memory.py  model.py  recorder.py
src/adqa/trace/store/: __init__.py  base.py  inmemory_store.py  json_store.py  queue.py
tests/config/: test_model.py
tests/core/: test_api_profiling.py  test_full_pipeline.py  test_healing.py  test_ultimate_quality.py
tests/data_ingress/: Orders.csv  test_airbyte.py  test_extra_readers.py  test_factory.py  test_readers.py  test_s3_reader.py
tests/detection/: test_deep_risks.py  test_detection_engine.py  test_rule_detectors.py
tests/execution/: test_execution_engine.py
tests/profiling/: test_engine.py  test_structural.py
tests/profiling/utils/: test_rounding.py
tests/scoring/: test_aggregator.py  test_decision.py  test_normalizer.py  test_rule_scorer.py  test_scoring_engine.py
tests/trace/: test_context.py  test_emitter.py  test_enums.py  test_events.py  test_llm.py  test_noop.py  test_reasoning.py
tests/trace/audit/: test_summarizer.py
tests/trace/hooks/: test_execution_hooks.py  test_lineage_hooks.py
tests/trace/lineage/: test_context.py  test_memory.py  test_model.py  test_recorder.py
tests/trace/store/: test_inmemory_store.py  test_json_store.py
todo/Considerations/: index.html
todo/RESEARCH_0/: index.html
todo/RESEARCH_1/: index.html
todo/TODO/: index.html
todo/ml_reproducibility_policy/: index.html
todo/phase3_mcp_descriptions/: index.html
trace/: index.html
