[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


# ============================================================
# Project metadata
# ============================================================

[tool.poetry]
name = "adqa"
description = "Autonomous Data Quality Agent: profiling, detection, explanation, and fix proposals for data quality issues."
authors = [
  "Mohammad T. Ismael <mohamed.talaat.ismael@gmail.com>",
  "Peter Gamil <peter7gamil@gmail.com>"
]
license = "MIT"
readme = "README.md"

# Version is controlled dynamically via Git tags
version = "0.0.0"

packages = [{ include = "adqa", from = "src" }]

homepage = "https://github.com/<org>/adqa"
repository = "https://github.com/<org>/adqa"
documentation = "https://github.com/<org>/adqa/tree/main/docs"

keywords = [
  "data-quality",
  "data-engineering",
  "ai-agent",
  "llm",
  "mlops",
  "dataops"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Data Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12"
]


# ============================================================
# Python version
# ============================================================

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# -----------------------------
# Core data stack (always installed)
# -----------------------------
pandas = "^2.2"
polars = "^0.20"
numpy = "^1.26"

sqlalchemy = "^2.0"
pydantic = "^2.6"
rich = "^13.7"
loguru = "^0.7"


# ============================================================
# Optional dependencies (extras)
# ============================================================

openai = { version = "^1.12", optional = true }
litellm = { version = "^1.30", optional = true }
tiktoken = { version = "^0.6", optional = true }

psycopg = { version = "^3.1", extras = ["binary"], optional = true }
duckdb = { version = "^0.10", optional = true }
pyarrow = { version = "^15.0", optional = true }

[tool.poetry.extras]

# Minimal install (default)
core = []

# LLM-powered reasoning & explanation
llm = [
  "openai",
  "litellm",
  "tiktoken"
]

# Database connectors
databases = [
  "psycopg",
  "duckdb",
  "pyarrow"
]

# Everything
all = [
  "openai",
  "litellm",
  "tiktoken",
  "psycopg",
  "duckdb",
  "pyarrow"
]


# ============================================================
# Development dependencies
# ============================================================

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

ruff = "^0.3"
black = "^24.1"
mypy = "^1.8"
pydoclint = "^0.5"

pre-commit = "^3.6"
types-requests = "^2.31"


# ============================================================
# Dynamic versioning via Git tags
# ============================================================

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

# Optional but recommended:
# Shows versions like: 0.2.0.dev5+githash on non-tagged commits
dirty = true


# ============================================================
# Tooling configuration
# ============================================================

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]


# ============================================================
# Coverage
# ============================================================

[tool.coverage.run]
branch = true
source = ["adqa"]

[tool.coverage.report]
show_missing = true
skip_covered = true

