[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "adqa"
version = "0.0.0" # managed by poetry-dynamic-versioning
description = "Autonomous Data Quality Agent: profiling, detection, explanation, and fix proposals for data quality issues."
authors = [
    "Mohammad T. Ismael <mohamed.talaat.ismael@gmail.com>",
    "Peter Gamil <peter7gamil@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mohammad-Talaat7/autonomous-data-quality-agent"
repository = "https://github.com/Mohammad-Talaat7/autonomous-data-quality-agent"
documentation = "https://Mohammad-Talaat7.github.io/autonomous-data-quality-agent/"
keywords = [
    "data-quality",
    "data-engineering",
    "ai-agent",
    "llm",
    "mlops",
    "dataops",
    "observability",
    "data-lineage",
    "automated-remediation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [{ include = "adqa", from = "src" }]

[tool.poetry.scripts]
adqa = "adqa.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

numpy = "^1.26.4"
pandas = "^2.2"
polars = "^1.0"
pydantic = "^2.8"
rich = "^13.8"
loguru = "^0.7"
sqlalchemy = "^2.0"

openai = { version = "^1.35", optional = true }
litellm = { version = "^1.41", optional = true }
tiktoken = { version = "^0.7", optional = true }
scikit-learn = { version = "^1.5", optional = true }

psycopg = { version = "^3.2", extras = ["binary"], optional = true }
duckdb = { version = "^1.1", optional = true }
pyarrow = { version = "^17.0", optional = true }
openpyxl = { version = "^3.1", optional = true }
xlrd = { version = "^2.0", optional = true }
boto3 = { version = "^1.34", optional = true }
pymongo = { version = "^4.8", optional = true }
requests = { version = "^2.32", optional = true }
airbyte = { version = ">=0.44.1", optional = true, python = ">=3.12,<3.13" }

[tool.poetry.extras]
llm = ["openai", "litellm", "tiktoken"]
ml = ["scikit-learn"]
databases = ["psycopg", "duckdb", "pyarrow"]
excel = ["openpyxl", "xlrd"]
aws = ["boto3"]
mongo = ["pymongo"]
http = ["requests"]
airbyte = ["airbyte"]
data = ["duckdb", "pyarrow", "openpyxl", "xlrd"]
all = [
    "openai",
    "litellm",
    "tiktoken",
    "scikit-learn",
    "psycopg",
    "duckdb",
    "pyarrow",
    "openpyxl",
    "xlrd",
    "boto3",
    "pymongo",
    "requests",
    "airbyte",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
black = "^24.8"
mypy = "^1.11"
pydoclint = "^0.5"
pre-commit = "^3.8"
types-requests = "^2.32"
boto3-stubs = "^1.34"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = "^0.26" }
pymdown-extensions = "^10.9"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "RUF", "PL", "S", "C4", "PT", "PTH"]
ignore = ["E501", "PLR2004"]
isort = { known-first-party = ["adqa"] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q --cov=adqa --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["adqa"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]