[package]
name = "adqa-tui"
version = "0.1.1"
edition = "2021"
description = "A real-time Terminal UI for the ADQA Autonomous Data Quality Agent"
license = "MIT"
repository = "https://github.com/Mohammad-Talaat7/autonomous-data-quality-agent"
homepage = "https://github.com/Mohammad-Talaat7/autonomous-data-quality-agent"
readme = "../README.md"
keywords = ["data-quality", "tui", "agent", "observability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# UI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Interop
pyo3 = { version = "0.23" }

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = "0.4"

# Errors
anyhow = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = "abort"     # Abort on panic to reduce binary size
strip = true        # Strip symbols from binary
